--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "OVERRIDE_MODE": "OFF",
   "OVERRIDE_DURATION_MIN": 0,
   "OVERRIDE_MESSAGE_TEXT": "",
-  "OUTPUT_MODE": "HDMI",
+  "OUTPUT_MODE": "RGBMATRIX",
   "MODEL_NAME": "Matrix192x16",
   "W": 192,
   "H": 16,
@@ -16,19 +16,19 @@
   "RGB_BRIGHTNESS": 100,
   "RGB_HARDWARE_MAPPING": "regular",
   "RGB_GPIO_SLOWDOWN": 4,
-  "RGB_PWM_BITS": 11,
-  "RGB_PWM_LSB_NANOSECONDS": 130,
+  "RGB_PWM_BITS": 7,
+  "RGB_PWM_LSB_NANOSECONDS": 100,
   "RGB_CHAIN_LENGTH": 6,
   "RGB_PARALLEL": 1,
   "RGB_SCAN_MODE": 0,
   "RGB_ROW_ADDRESS_TYPE": 0,
-  "RGB_MULTIPLEXING": 0,
+  "RGB_MULTIPLEXING": 4,
   "RGB_LED_RGB_SEQUENCE": "RGB",
   "RGB_PIXEL_MAPPER": "",
   "RGB_PANEL_TYPE": "",
-  "FPS": 30,
-  "PPS_TOP": 30.0,
-  "PPS_BOT": 30.0,
+  "FPS": 60,
+  "PPS_TOP": 20.0,
+  "PPS_BOT": 20.0,
   "PPS_SINGLE": 20.0,
   "REFRESH_SEC": 240,
   "FRESH_SEC": 300,
@@ -118,7 +118,7 @@
   "PREROLL_COLOR": "yellow",
   "PREROLL_PPS": 32.0,
   "INJECT_MESSAGE": "*** DEV MODE ***",
-  "MESSAGE_EVERY": 0,
+  "MESSAGE_EVERY": 1,
   "MESSAGE_ROW": "auto",
   "MESSAGE_COLOR": "magenta",
   "MESSAGE_TEST_FORCE": false,
@@ -141,26 +141,13 @@
   "SCHEDULE_OFF_END": "07:00",
   "SCHEDULE_BLANK_FPS": 5,
   "SCHEDULE_TEST_FORCE_OFF": false,
-  "DIM_ENABLED": true,
-  "DIM_LEVEL": "off",
-  "DIM_CUSTOM_PCT": 0,
-  "DIM_SCHEDULE_ENABLED": false,
-  "DIM1_START": "",
-  "DIM1_END": "",
-  "DIM1_PCT": 30,
-  "DIM2_START": "",
-  "DIM2_END": "",
-  "DIM2_PCT": 60,
-  "DIM3_START": "",
-  "DIM3_END": "",
-  "DIM3_PCT": 100,
   "DIM_TEST_ENABLED": false,
   "DIM_TEST_PCT": 100,
   "NIGHT_MODE_ENABLED": true,
   "NIGHT_MODE_START": "20:00",
   "NIGHT_MODE_END": "07:00",
   "NIGHT_MODE_DIM_PCT": 30,
-  "NIGHT_MODE_SPEED_PCT": 30,
+  "NIGHT_MODE_SPEED_PCT": 75,
   "FONT_FAMILY_BASE": "DejaVuSansMono",
   "FONT_FAMILY_SCOREBOARD": "DejaVuSansMono",
   "FONT_FAMILY_DEBUG": "DejaVuSansMono",
@@ -225,9 +212,9 @@
   "SCORE_ALERTS_TEST_LEAGUE": "NHL",
   "SCORE_ALERTS_TEST_TEAM": "MTL",
   "SCORE_ALERTS_TEST_INTERVAL_SEC": 5,
-  "CLOCK_24H": true,
+  "CLOCK_24H": false,
   "CLOCK_SHOW_SECONDS": false,
-  "CLOCK_BLINK_COLON": true,
+  "CLOCK_BLINK_COLON": false,
   "CLOCK_COLOR": "yellow",
   "CLOCK_DATE_SHOW": false,
   "CLOCK_DATE_FMT": "%a %b %d",
